# counted

./: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  DOCUMENTATION.md  Dioxus.toml  Dockerfile  README  README.md  Rocket.toml  _schema.sql  altstore-source.json  diesel.toml  docker-compose.release.yml  docker-compose.yml  input.css  package-lock.json  package.json  runMigrationsAndBinary.sh  rustfmt.toml  schema.sql  server.toml  tailwind.config.js  tailwind.css
.claude/: settings.json
.devcontainer/: devcontainer.json  docker-compose.yml  dockerFile
.sqlx/: query-042468ec86a8bcb5dd74de92e655a748bf949a4001c3eb0c8043e5044c76ba65.json  query-049851d7292316441905c443ff4ef05a7cc045f1f4dc687b3a6093a00c74f63f.json  query-09396c59754a116906986fe9f2df0597aca24b61fb06274587844ebacbe2f09f.json  query-0e604873587f3b4420b0a49f3fda5f38dc8b88d691405124375ade74072c393e.json  query-109aa1ff81dd1917d924f8d93fd99ffe3a87f2ee1af7adfbce0c7911a92635c8.json  query-176cbf9156dfa0dec65dbf14a66b86e9af4ad23b9d925267b75696bb501f997d.json  query-19849f47c2208ccd0c1a588f68ce5dab6d0cf7e1b49256436adb11dd243d6670.json  query-264285c09348c172084fe2f47c6b0c8189613380272a377c300bf8a4d2475866.json  query-26620da62ce0fd54997168693fd8f83066777b68ee2b86f7a7092262655cd4f7.json  query-3261e4cc0178324681d1eed5e767a0995f3164e433561c3066e286b7d4f97d2b.json  query-36676783d648a0cf17b63d72ddd446ea1dc52bded16e13cfec3314155348a738.json  query-3a40066b46feb9083843017493a7765a2f301e003185f4d1f589fb87de65a19c.json  query-49cb76d838e75c5ac4e43e3c823768f58f1c5d98af24660002ba5071412bacdd.json  query-6082ee4eaed7c7b782736330d257fb900f2109613ad6080434ce466d9845884b.json  query-61546441418d9d45e24b102a4cf0a1e6a4960dc9f1a77c96d06769cf24f30b3b.json  query-6c3fd09a6e8f94f6ea581915b2c5b7c9b08bd13946002a90414c7a1dec9c01ac.json  query-765e8beb21f6ea0ced890726c82bca10fe3d8c7887f654424238822683063657.json  query-8479daa9622eab160cbb9cba4de1504feac5c525f678f8f40a91fec65417c881.json  query-8737c7e3cb7d537e14b7776ce44eba7ba5dc7d4145fccda33d881d590dde1ce2.json  query-88b960aaa24e7379244ddbec2b06d992d41f0892ec8a497e35492129c7aa20c4.json  (+23 more)
api/: Cargo.toml
api/src/: db.rs  lib.rs
api/src/authentication/: auth_session.rs  mod.rs
api/src/entities/: entities.rs
api/src/expenses/: expenses_repository.rs
api/src/payments/: mod.rs  payments_repository.rs
api/src/projects/: mod.rs  projects_repository.rs
api/src/sse/: sse.rs
api/src/users/: mod.rs  users_repository.rs
back/: Cargo.toml
back/migrations/2022-07-03-201848_create_users/: down.sql  up.sql
back/migrations/2022-07-03-204818_create_expenses/: down.sql  up.sql
back/migrations/2022-11-01-221350_create_payments/: up.sql
back/migrations/2023-03-11-152314_create_project_users/: down.sql  up.sql
back/migrations/2023-08-07-175536_add_user_project_table/: down.sql  up.sql
back/src/: expense_web.rs  main.rs  models.rs  project_web.rs  schema.rs  user_project_web.rs  user_web.rs
back/src/authentication/: authentication.rs  mod.rs
back/src/balance/web/: balance_web.rs  mod.rs
back/src/expenses/: mod.rs
back/src/expenses/application/: expense_application.rs  expense_application_test.rs  mod.rs
back/src/expenses/domain/: expense_model.rs  mod.rs
back/src/expenses/repository/: expense_repository.rs  mod.rs
back/src/expenses/web/: expense_web.rs  mod.rs
back/src/models/: expense_model.rs  mod.rs  payment_model.rs  project_model.rs  user_model.rs  user_project_model.rs
back/src/payments/: mod.rs
back/src/payments/application/: mod.rs  payment_application.rs
back/src/payments/domain/: mod.rs  payment_model.rs  payment_query_params.rs
back/src/payments/repository/: mod.rs  payment_repository.rs
back/src/payments/web/: mod.rs  payment_web.rs
back/src/projects/application/: mod.rs  project_application.rs  project_application_test.rs
back/src/projects/domain/: balance_model.rs  mod.rs  project_model.rs
back/src/projects/repository/: project_repository.rs
back/src/projects/web/: mod.rs  project_web.rs
back/src/query_strings/: expense_query_string.rs  expenses_query_string.rs  mod.rs  project_query_string.rs  user_projects_query_string.rs  user_query_string.rs  users_query_string.rs
back/src/users/application/: mod.rs  user_application.rs
back/src/users/domain/: user_model.rs
back/src/users/repository/: user_repository.rs
back/src/users/web/: mod.rs  user_web.rs
back/tests/user_projects/: user_projects_web_test.rs
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_user.rs
backend/src/: main.rs
desktop/: Cargo.toml
desktop/assets/: tailwind.css
desktop/src/: main.rs
desktop/src/views/: projects.rs
front/: Cargo.toml  index.html
front/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: api_state.rs  mod.rs
shared/src/sse/: sse.rs
shared/src/view_models/: users_project_view_model.rs
ui/: Cargo.toml
ui/src/: add_expense_modal.rs  add_project_modal.rs  add_user_modal.rs  app_header.rs  expenses.rs  lib.rs  payments.rs  project.rs  projects.rs
ui/src/common/: app_header.rs  avatar.rs  back_button_arrow.rs  callout.rs  dropdown_button.rs  mod.rs  toast.rs
ui/src/expenses/: expense_bar_chart.rs  expense_item.rs  expense_list.rs  expenses.rs  expenses_user_section.rs  mod.rs  summary_card.rs
ui/src/modals/: add_expense_modal.rs  add_project_modal.rs  add_user_modal.rs  mod.rs  update_project_modal.rs
ui/src/payments/: mod.rs  payments.rs
ui/src/projects/: mod.rs  project.rs  projects.rs
ui/src/route/: mod.rs  route.rs
ui/src/users/: profile.rs
ui/src/utils/: listen_to_sse_event.rs  mod.rs
web/: Cargo.toml
web/assets/: main.css  tailwind.css
web/src/: main.rs
web/src/api/: mod.rs  projects_api.rs
web/src/views/: expense_item.rs  expense_list.rs  expenses.rs  expenses_user_section.rs  home.rs  mod.rs  payments.rs  project.rs  projects.rs
web/src/views/expenses/: expense_item.rs  expense_list.rs  expenses_header.rs  summary_card.rs
(+285 files in other folders)
