[package]
name = "h-count"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
actix-web = "4"
r2d2 = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel-derive-enum = { version = "1.1.2", features = ["postgres"] }