[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
shared = { path = "../shared" }

# server deps
# axum = "0.7"
# tokio = { version = "1", features = ["full"] }
# tower-http = { version = "0.5.0", features = ["fs", "trace"] }

# Serialisation
serde = "1.0"
serde_json = "1.0"

# Tools
# anyhow = "1.0"
# thiserror = "1.0"
# tracing = "0.1"
# tracing-subscriber = "0.3"
dotenvy = "0.15"
# uuid = "1.6"
# rust_decimal = "1.37.1"
# chrono = "0.4.41"

# DB
## Fix compatibility with wasm
[target.'cfg(not(target_arch = "wasm32"))'.dependencies] 
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }
