[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
shared = { path = "../shared" }

# server deps
# tokio = { version = "1", features = ["full"] }
# tower-http = { version = "0.5.0", features = ["fs", "trace"] }

# Serialisation
serde = "1.0"
serde_json = "1.0"

# Tools
# anyhow = "1.0"
# thiserror = "1.0"
# tracing = "0.1"
# tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = "1.6"
# rust_decimal = "1.37.1"
chrono = "0.4.41"

# optional
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "derive"], optional = true }
axum = { version = "0.7", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
futures = { version = "0.3.31", optional = true }
tokio = { version = "1.43.0", optional = true }
async-stream = { version = "0.3.6", optional = true }
futures-util = { version = "0.3.31", optional = true }
axum_session = { version = "0.16.0", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }
once_cell = "1.21.3"
anyhow = "1.0.95"
async-trait = { version = "0.1.88", optional = true }
http = "1.3.1"
axum_session_sqlx = { version = "0.5.0", optional = true }

[features]
server = ["sqlx", "async-trait", "axum", "axum_session", "axum_session_auth", "axum_session_sqlx", "tokio-stream", "futures", "tokio", "async-stream", "futures-util"]
