[package]
name = "h-count"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.6"
actix-web = "4"
r2d2 = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }