[package]
name = "h-count"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.6"
actix-web = "4"
actix-web-httpauth = "0.8.1"
r2d2 = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }
derive_more = "0.99.17"
alcoholic_jwt = "1.0.0"