[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Paquet local partagé
shared = { path = "../shared" }

# Dépendances serveur
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

# Base de données
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Sérialisation
serde = "1.0"
serde_json = "1.0"

# Utilitaires
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
uuid = "1.6"
rust_decimal = "1.37.1"
chrono = "0.4.41"
