[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
shared = { workspace = true }
api = { workspace = true }

# Serialisation
serde = "1.0"
serde_json = "1.0"

dotenvy = "0.15"
uuid = "1.6"
chrono = "0.4.41"
tracing = "0.1.41"

# optional
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "derive"], optional = true }
axum = { version = "0.8.1", optional = true }
dioxus-logger = "0.6.2"

[features]
default = []
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "sqlx", "axum", "shared/server", "api/server"]