[package]
name = "hcount-front-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = { version="0.11", features = ["yew_integration"] }
gloo-net = "0.2.5"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.33"
serde = { version = "1.0.152", features = ["derive"] }
wasm-bindgen = "0.2.83"
chrono = { version = "0.4", features = ["serde"] }