[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
shared = { path = "../shared" }

[lib]
crate-type = ["cdylib"]