[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Paquet local partagé
shared = { path = "../shared" }

# Dépendances Dioxus
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-router = "0.5"

# Pour les appels HTTP depuis WASM
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"

# Utilitaires
serde = "1.0"
uuid = "1.6"
rust_decimal = "1.34"

## Indirect dep
# [patch.crates-io]
getrandom = { version = "0.2", features = ["js"] }
imp = "0.1.0"

# Nécessaire pour que `dioxus serve` fonctionne
[features]
default = []
