[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde-with-str"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "derive"], optional = true }
async-trait = { version = "0.1.88", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }

[features]
default = []
server = ["sqlx", "async-trait", "axum_session_auth"]