[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
api = { workspace = true, default-features = false }
shared = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
web-sys = "0.3.77"
eventsource-client = { version = "0.15.0", optional = true }
serde_json = "1.0.141"
futures-util = "0.3.31"

[features]
server = ["eventsource-client"]
