[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
shared = { workspace = true }
api = { workspace = true }

# Serialisation
serde = "1.0"
serde_json = "1.0"

dotenvy = "0.15"
uuid = "1.6"
chrono = "0.4.41"
tracing = "0.1.41"
dioxus-logger = "0.6.2"
web-sys = "0.3.77"

# optional
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "derive"], optional = true }
axum = { version = "0.7", optional = true }
axum_session = { version = "0.16.0", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }
tokio = { version = "1.47.0", optional = true }
axum_session_sqlx = { version = "0.5.0", optional = true }
async-trait = { version = "0.1.88", optional = true }


[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "sqlx", "async-trait", "axum", "axum_session", "axum_session_auth", "axum_session_sqlx", "shared/server", "api/server", "tokio"]
